--- a/character.css
+++ b/character.css
@@ -139,7 +139,6 @@ h1 {
 }
 
 h2 {
-    color: #967c99;
     font-family: var(--font-titles);
     font-size: 1.5em;
 }
@@ -162,12 +161,20 @@ a {color: var(--text); text-decoration: none;}
     -webkit-transition: 0s!important;
 }
 
-a, a:hover, #container {
+a, a:hover, .tmblr-iframe, .tmblr-iframe:hover, #container {
     transition: 0.4s;
     -moz-transition: 0.4s;
     -ms-transition: 0.4s;
     -o-transition: 0.4s;
     -webkit-transition: 0.4s;
+}
+
+#credit, #credit:hover {
+    transition: 0.8s ease-out;
+    -moz-transition: 0.8s ease-out;
+    -ms-transition: 0.8s ease-out;
+    -o-transition: 0.8s ease-out;
+    -webkit-transition: 0.8s ease-out;
 }
 
 /* Muse Page Styling */
